vlib/v/parser/tests/operator_normal_fn.vv
fn +(x int) int {
	return 5 + x
}
